minor edits to notebooks

--- a/notebooks/gedi_l2b_vertical_plant_profiles.ipynb
+++ b/notebooks/gedi_l2b_vertical_plant_profiles.ipynb
@@ -360,19 +360,10 @@
     "    peak_canopy = numpy.argmax(pavd_z)\n",
     "    peak_height = height[peak_canopy,i]\n",
     "    \n",
-    "    \"\"\"\n",
-    "    if max_height < rh100:\n",
-    "        max_height = 0.0\n",
-    "        peak_height = 0.0\n",
-    "    else:\n",
-    "        max_height = height[first_canopy,i]\n",
-    "        peak_canopy = numpy.argmax(pavd_z)\n",
-    "        peak_height = height[peak_canopy,i]\n",
-    "    \"\"\"\n",
-    "    \n",
     "    fig,axs = plt.subplots(1, 4, figsize=(15, 5), sharey=True)\n",
     "    \n",
-    "    axs[0].fill_betweenx(height[:,i], pgap_theta_z[:,i]-err, pgap_theta_z[:,i]+err, facecolor='lightgrey')\n",
+    "    axs[0].fill_betweenx(height[:,i], pgap_theta_z[:,i]-err, pgap_theta_z[:,i]+err, \n",
+    "                         facecolor='lightgrey')\n",
     "    axs[0].plot(pgap_theta_z[:,i], height[:,i], color='black')\n",
     "    axs[0].axhline(y=rh100, color='blue', linestyle='dashed', label='RH100')\n",
     "    axs[0].axhline(y=max_height, color='darkgreen', linestyle='dashed', label='Canopy')\n",
