updated notebooks to accommodate function name changes

--- a/notebooks/gedi_l2b_vertical_plant_profiles.ipynb
+++ b/notebooks/gedi_l2b_vertical_plant_profiles.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,32 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['BEAM0000',\n",
-       " 'BEAM0001',\n",
-       " 'BEAM0010',\n",
-       " 'BEAM0011',\n",
-       " 'BEAM0101',\n",
-       " 'BEAM0110',\n",
-       " 'BEAM1000',\n",
-       " 'BEAM1011']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BEAM0000', 'BEAM0001', 'BEAM0010', 'BEAM0011', 'BEAM0101', 'BEAM0110', 'BEAM1000', 'BEAM1011']\n"
+     ]
     }
    ],
    "source": [
     "l2b_f = h5io.GEDIH5File('GEDI02_B_2019121233316_O02176_T04876_02_001_01.h5')\n",
-    "l2b_f.open()\n",
-    "beam = 'BEAM1011'\n",
-    "l2b_f.beams"
+    "l2b_f.open_h5()\n",
+    "print(l2b_f.beams)\n",
+    "beam = 'BEAM1011'"
    ]
   },
   {
@@ -99,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +286,7 @@
        "[342573 rows x 7 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,12 +308,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Close the HDF-5 file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2b_f.close_h5()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plot example vertical plant profiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -418,13 +424,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a1c6defea754d778c24332f17147396",
+       "model_id": "c69fd86ed3ba475488d75d49b9c459a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,7 +447,7 @@
        "<function __main__.update(index=0)>"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
