--- a/notebooks/icesat2_atl03_atl08_photon_classification.ipynb
+++ b/notebooks/icesat2_atl03_atl08_photon_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open the ATL03 file\n",
     "atl03_fid = h5io.ATL03H5File('ATL03_20190212000416_06950214_003_01.h5')\n",
-    "atl03_fid.open()\n",
+    "atl03_fid.open_h5()\n",
     "\n",
     "# Open the ATL08 file\n",
     "atl08_fid = h5io.ATL08H5File('ATL08_20190212000416_06950214_003_01.h5')\n",
-    "atl08_fid.open()"
+    "atl08_fid.open_h5()"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +123,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Close the HDF-5 files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atl03_fid.close_h5()\n",
+    "atl08_fid.close_h5()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plot the classified photons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -189,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fddef39e8b94e498e4d09d9e62a4b4e",
+       "model_id": "ed128f2d28f84105a587e77fd2b5d139",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +229,7 @@
        "<function __main__.update(start=0)>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
